upd embedded images to get ver from terraform.conf

--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -110,7 +110,7 @@ jobs:
         key: tar-pine-${{ github.run_id }}
         
     - name: Deploy to partition
-      run: sudo ./debos-docker -m 10G pinephone-unified.yaml
+      run: source ./etc/terraform.conf && VER="${VERSION}${SUBVER}" && sudo ./debos-docker -t image:"Rhino-Linux-${VER}-pinephone-unified.img" -m 10G pinephone-unified.yaml
       
     - name: Place output folder
       run: sudo mkdir -p builds/pine
@@ -171,7 +171,7 @@ jobs:
         key: tar-rpi-${{ github.run_id }}
         
     - name: Deploy to partition
-      run: sudo ./debos-docker -m 10G raspberrypi-desktop.yaml
+      run: source ./etc/terraform.conf && VER="${VERSION}${SUBVER}" && sudo ./debos-docker -t image:"Rhino-Linux-${VER}-rpi-desktop.img" -m 10G raspberrypi-desktop.yaml
       
     - name: Place output folder
       run: sudo mkdir -p builds/rpi-desktop
@@ -201,7 +201,7 @@ jobs:
         key: tar-rpi-${{ github.run_id }}
         
     - name: Deploy to partition
-      run: sudo ./debos-docker -m 10G raspberrypi-server.yaml
+      run: source ./etc/terraform.conf && VER="${VERSION}${SUBVER}" && sudo ./debos-docker -t image:"Rhino-Linux-${VER}-rpi-server.img" -m 10G raspberrypi-server.yaml
       
     - name: Place output folder
       run: sudo mkdir -p builds/rpi-server
@@ -263,7 +263,7 @@ jobs:
         key: tar-tab-${{ github.run_id }}
         
     - name: Deploy to partition
-      run: sudo ./debos-docker -m 10G pinetab.yaml
+      run: source ./etc/terraform.conf && VER="${VERSION}${SUBVER}" && sudo ./debos-docker -t image:"Rhino-Linux-${VER}-pinetab.img" -m 10G pinetab.yaml
       
     - name: Place output folder
       run: sudo mkdir -p builds/tab
@@ -293,7 +293,7 @@ jobs:
         key: tar-tab-${{ github.run_id }}
         
     - name: Deploy to partition
-      run: sudo ./debos-docker -m 10G pinetab2.yaml
+      run: source ./etc/terraform.conf && VER="${VERSION}${SUBVER}" && sudo ./debos-docker -t image:"Rhino-Linux-${VER}-pinetab2.img" -m 10G pinetab2.yaml
       
     - name: Place output folder
       run: sudo mkdir -p builds/tab2
