--- a/.github/workflows/pinephone.yml
+++ b/.github/workflows/pinephone.yml
@@ -50,7 +50,7 @@ jobs:
         key: tar-pine-${{ github.run_id }}
         
     - name: Deploy to partition
-      run: sudo ./debos-docker -m 10G pinephone-unified.yaml
+      run: source ./etc/terraform.conf && VER="${VERSION}${SUBVER}" && sudo ./debos-docker -t image:"Rhino-Linux-${VER}-pinephone-unified.img" -m 10G pinephone-unified.yaml
       
     - name: Place output folder
       run: sudo mkdir -p builds/pine
