--- a/.github/workflows/raspi.yml
+++ b/.github/workflows/raspi.yml
@@ -49,7 +49,7 @@ jobs:
         key: tar-rpi-${{ github.run_id }}
         
     - name: Deploy to partition
-      run: sudo ./debos-docker -m 10G raspberrypi-desktop.yaml
+      run: source ./etc/terraform.conf && VER="${VERSION}${SUBVER}" && sudo ./debos-docker -t image:"Rhino-Linux-${VER}-rpi-desktop.img" -m 10G raspberrypi-desktop.yaml
       
     - name: Place output folder
       run: sudo mkdir -p builds/rpi-desktop
@@ -79,7 +79,7 @@ jobs:
         key: tar-rpi-${{ github.run_id }}
         
     - name: Deploy to partition
-      run: sudo ./debos-docker -m 10G raspberrypi-server.yaml
+      run: source ./etc/terraform.conf && VER="${VERSION}${SUBVER}" && sudo ./debos-docker -t image:"Rhino-Linux-${VER}-rpi-server.img" -m 10G raspberrypi-server.yaml
       
     - name: Place output folder
       run: sudo mkdir -p builds/rpi-server
