--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -13,12 +13,12 @@ BASEVERSION="devel"
 CODENAME="devel"
 
 # distribution version
-RELEASE="2"
+RELEASE="3"
 SUBVER=""
 VERSION="$(date +%Y).$RELEASE"
 
 # full image name
-FNAME="Rhino-Linux-$VERSION$SUBVER-pinephone-unified"
+FNAME="Rhino-Linux-$VERSION$SUBVER-pinetab"
 
 # distribution channel
 #CHANNEL="unstable"
