--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -13,7 +13,7 @@ BASEVERSION="devel"
 CODENAME="devel"
 
 # distribution version
-RELEASE="4"
+RELEASE="1~beta"
 SUBVER=""
 VERSION="$(date +%Y).$RELEASE"
 
