--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -50,6 +50,14 @@ jobs:
           cp binary_rootfs /usr/lib/live/build/binary_rootfs
         fi
 
+    - name: Examine bwrap situation
+      run: |
+        curl -fsSL https://pacstall.dev/q/install\?dnt > pacstall-install.sh || curl -fsSL https://git.io/JsADh > pacstall-install.sh
+        chmod +x ./pacstall-install.sh
+        echo N\n | sudo -E ./pacstall-install.sh
+        rm ./pacstall-install.sh
+        pacstall -PI nala-deb
+
     - name: Make scripts executable
       run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
 
