--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -39,7 +39,7 @@ jobs:
       run: |
         rm -rf /var/lib/apt/lists/*
         sed -i 's/jammy/noble/g' /etc/apt/sources.list
-        apt-get update && apt-get install --reinstall sudo debootstrap mtools dosfstools qemu-user-static binfmt-support dpkg-dev curl -y
+        apt-get update && apt-get install --reinstall sudo debootstrap mtools dosfstools qemu-user-static binfmt-support dpkg-dev bubblewrap curl -y
         ln -sfn /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/noble
         dpkg -i debs/live-build_*_all.deb
         mv /usr/share/debootstrap/functions functions
@@ -52,11 +52,25 @@ jobs:
 
     - name: Examine bwrap situation
       run: |
-        curl -fsSL https://pacstall.dev/q/install\?dnt > pacstall-install.sh || curl -fsSL https://git.io/JsADh > pacstall-install.sh
-        chmod +x ./pacstall-install.sh
-        echo N\n | sudo -E ./pacstall-install.sh
-        rm ./pacstall-install.sh
-        pacstall -PI nala-deb
+        echo '#!/bin/bash
+        bwrap --dev-bind "$1" / \
+          --proc /proc \
+          --dev /dev \
+          --tmpfs /tmp \
+          --ro-bind /usr /usr \
+          --ro-bind /bin /bin \
+          --ro-bind /lib /lib \
+          --ro-bind /lib64 /lib64 \
+          --ro-bind /etc /etc \
+          --symlink usr/lib /lib \
+          --symlink usr/bin /bin \
+          --symlink usr/lib64 /lib64 \
+          --dir /home \
+          --dir /root \
+          --chdir / \
+          /bin/bash' >> bwrap.sh
+        chmod +x bwrap.sh
+        cp bwrap.sh /usr/sbin/chroot
 
     - name: Make scripts executable
       run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
