--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -39,7 +39,7 @@ jobs:
       run: |
         rm -rf /var/lib/apt/lists/*
         sed -i 's/jammy/noble/g' /etc/apt/sources.list
-        apt-get update && apt-get install --reinstall sudo debootstrap mtools dosfstools qemu-user-static binfmt-support dpkg-dev bubblewrap curl -y
+        apt-get update && apt-get install --reinstall sudo debootstrap mtools dosfstools qemu-user-static binfmt-support dpkg-dev -y
         ln -sfn /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/noble
         dpkg -i debs/live-build_*_all.deb
         mv /usr/share/debootstrap/functions functions
@@ -49,19 +49,6 @@ jobs:
         if [[ "${{ matrix.type }}" == "tarball" ]]; then
           cp binary_rootfs /usr/lib/live/build/binary_rootfs
         fi
-
-    - name: Examine bwrap situation
-      run: |
-        echo '#!/bin/bash' >> bwrap.sh
-        echo 'bwrap --dev-bind "$1" / \' >> bwrap.sh
-        echo '--proc /proc --dev /dev \' >> bwrap.sh
-        echo '--tmpfs /tmp --ro-bind /usr /usr \' >> bwrap.sh
-        echo '--ro-bind /bin /bin --ro-bind /lib /lib \' >> bwrap.sh
-        echo '--ro-bind /etc /etc --symlink usr/lib /lib \' >> bwrap.sh
-        echo '--symlink usr/bin /bin --dir /home --dir /root \' >> bwrap.sh
-        echo '--chdir / /bin/bash' >> bwrap.sh
-        chmod +x bwrap.sh
-        cp bwrap.sh /usr/sbin/chroot
 
     - name: Make scripts executable
       run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
