--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -39,7 +39,7 @@ jobs:
       run: |
         rm -rf /var/lib/apt/lists/*
         sed -i 's/jammy/noble/g' /etc/apt/sources.list
-        apt-get update && apt-get install --reinstall sudo debootstrap mtools dosfstools qemu-user-static binfmt-support dpkg-dev systemd-container -y
+        apt-get update && apt-get install --reinstall sudo debootstrap mtools dosfstools qemu-user-static binfmt-support dpkg-dev -y
         ln -sfn /usr/share/debootstrap/scripts/gutsy /usr/share/debootstrap/scripts/noble
         dpkg -i debs/live-build_*_all.deb
         mv /usr/share/debootstrap/functions functions
@@ -49,7 +49,6 @@ jobs:
         if [[ "${{ matrix.type }}" == "tarball" ]]; then
           cp binary_rootfs /usr/lib/live/build/binary_rootfs
         fi
-        cp lb_chroot_devpts /usr/lib/live/build/lb_chroot_devpts
 
     - name: Make scripts executable
       run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
