--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -46,17 +46,20 @@ jobs:
         patch -i 0002-remove-WRONGSUITE-error.patch
         mv functions /usr/share/debootstrap/functions
         cp binary_grub-efi /usr/lib/live/build/binary_grub-efi
-        if [[ "${{ matrix.type }}" == "tarball" ]]; then
-          cp binary_rootfs /usr/lib/live/build/binary_rootfs
-        fi
+
+    - name: set to tarball
+      if: matrix.type == 'tarball'
+      run: cp binary_rootfs /usr/lib/live/build/binary_rootfs
 
     - name: Make scripts executable
       run: chmod -R +x build.sh etc/auto/config etc/terraform.conf etc/
 
     - name: Build system image
-      run: |
-        ./build.sh etc/terraform.conf
-        echo "OUT_ISO=$(cd builds/${{ matrix.target }}; ls *.iso)"  >> $GITHUB_ENV
+      run: ./build.sh etc/terraform.conf
+
+    - name: export iso filename
+      if: matrix.type == 'iso'
+      run: echo "OUT_ISO=$(cd builds/${{ matrix.target }}; ls *.iso)"  >> $GITHUB_ENV
 
     - uses: actions/upload-artifact@v4.3.3
       if: matrix.type == 'iso'
