--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -14,7 +14,7 @@ CODENAME="devel"
 
 # distribution version
 RELEASE="2"
-SUBVER="~RC"
+SUBVER=""
 VERSION="$(date +%Y).$RELEASE"
 
 # full image name
