--- a/etc/config/bootloaders/grub-pc/grub.cfg
+++ b/etc/config/bootloaders/grub-pc/grub.cfg
@@ -4,10 +4,15 @@ if loadfont /boot/grub/font.pf2 ; then
  insmod efi_uga
  insmod gfxterm
  terminal_output gfxterm
-fi
+ set menu_color_normal=white/black
+ set menu_color_highlight=black/light-gray
 
-set menu_color_normal=white/black
-set menu_color_highlight=black/light-gray
+ insmod all_video
+ insmod png
+ set theme=/boot/grub/themes/rhino/theme.txt
+ export theme
+ set gfxpayload=keep
+fi
 
 set timeout=5
 menuentry "Try or Install Rhino Linux OS" {
