--- a/.github/workflows/iso.yml
+++ b/.github/workflows/iso.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: buildjet-4vcpu-ubuntu-2204
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
     - name: Install needed packages
       run: |
@@ -38,6 +40,8 @@ jobs:
     runs-on: buildjet-4vcpu-ubuntu-2204-arm
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
     - name: Install needed packages
       run: |
